fixed footer gaps

--- a/E-Wedding Website/src/Styles/footer.css
+++ b/E-Wedding Website/src/Styles/footer.css
@@ -1,6 +1,6 @@
 .site-footer {
   background: #2c2c2c;
-  padding: 50px 30% 20px;
+  padding: 2.5vw 30% 1vw;
   font-family: "Georgia", serif;
   color: #FFFFFF;
   position: relative;
@@ -13,25 +13,25 @@
   flex-wrap: wrap;
   justify-content: space-between;
   text-align: center;
-  gap: 40px;
+  gap: 1vw;
 }
 
 .footer-logo img {
-  max-width: 200px;
+  max-width: 12.5vw;
   height: auto;
   cursor: pointer;
 }
 
 .social-icons {
-  margin-top: 20px;
+  margin-top: 1vw;
   display: flex;
-  gap: 20px;
+  gap: 1vw;
   justify-content: center;
 }
 
 .social-icons img {
-  width: 30px;
-  height: 30px;
+  width: 2vw;
+  height: 2vw;
   border-radius: 50%;
   transition: transform 0.3s ease;
 }
@@ -42,23 +42,24 @@
 
 .footer-links h3,
 .footer-contact h3 {
-  font-size: 18px;
+  font-size: 1.2vw;
   margin-bottom: 12px;
   font-weight: bold;
-  margin-left: 2em
+  margin-left: 1vw;
 }
 
 .footer-links table {
   padding: 0;
-  margin-left: 2em;
-  height: 70px;
+  margin-left: 1vw;
+  height: 5vw;
 }
 
 .footer-links table td a {
   text-decoration: none;
   color: #FFFFFF;
   transition: color 0.3s ease;
-  padding: 1em;
+  padding: 1vw;
+  font-size: 0.8vw;
 }   
 
 .footer-links table td a:hover {
@@ -66,8 +67,9 @@
 }
 
 .footer-contact p {
-  margin: 6px 0;
-  font-size: 14px;
+  margin: 4px 0;
+  font-size: 0.8vw;
+  text-align: left;
 }
 
 .footer-bottom {
